# turbolin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh  run.sh
include/turbolin/: assert.hpp  assertion.hpp  isNumber.hpp  matrix.hpp  matrix.inl  simd.hpp  turbolin.hpp  vector.hpp  vector.inl
include/turbolin/default/: vector.inl
include/turbolin/sse2/: vector.inl
include/turbolin/sse42/: vector.inl
lib/include/turbolin/: assertion.hpp
lib/src/: test.cpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
tests/: main.cpp  matrix.cpp  vector.cpp
